import "common.info_header.proto";

package dtm;

// This is a combination of other messages, send all together at timed intervals.  The other individual ones
// will be turned on an off if needed
message perf_stats {
    required common.info_header header = 1; 
    required int64 tx_count = 2;             // incrementing count of transaction begins by this dtm
    required int64 abort_count = 3;          // incrementing count of transaction aborts by this dtm
    required int64 commit_count = 4;         // incrementing count of transaction commits by this dtm
    required int64 tm_initiated_aborts = 5;  // incrementing count of aborts initiated by the dtm itself (bad)
    required string tm_state = 6;            // state of this dtm (UP, DOWN)
    required string tx_state = 7;            // state of transactions (ENABLED, DISABLED)
    required int32 hung_tx_count = 8;        // how many hung transactions are there currently
    required int32 outstanding_tx_count = 9; // how many active transactions are there owned by this dtm
    optional string oldest_transid_internal = 10;      // oldest transid in the system
    optional int64 oldest_transid_timestamp_utc = 11;  // oldest transid timestamp utc
    optional int64 oldest_transid_timestamp_lct = 12;  // oldest transid timestamp lct
    optional int64 oldest_transid       = 13;  // first 64 bits of transid 
}

