import "health.layer_check.proto";

package serverlayer;

//!!BLOCK:HEADER=BEGIN
//!!BLOCK:PUBLICATION-DESCRIPTION=BEGIN
//
// Filename: serverlayer.level_1_check.proto
//
// This file defines the top-level health/state publication for the server layer
//
//  This publication is sent when we do basic health checks for the
//    server layer; it might contain one or more secondary checks as well.
//
//
//!!BLOCK:PUBLICATION-DESCRIPTION=END
//!!BLOCK:SQL:TABLENAME=Manageability.instance_repository.level_1_check
//!!BLOCK:HEADER=END


message level_1_check
{
            //!!SQL: INCLUDE; XML-MIB: INCLUDE; DOC: INCLUDE; LIST: INCLUDE; TPA: INCLUDE; TOKEN: INCLUDE
            //!!BLOCK: FIELD DESCRIPTION = BEGIN
            //
            // the actual level one health check values
            //
            //!!BLOCK: FIELD DESCRIPTION = END
            //!!SQL: NULLABLE=NO
      required health.layer_check checkinfo = 1;
}
