import "common.info_header.proto";

package sql;

message space_usage {

 message label_stats_aggr_all_partitions {	
   required string catalog_name   	=1;
   required string schema_name          =2;
   required string object_name          =3;
   required string object_name_type     =4;
   required string object_name_space    =5;
   required string partition_name       =6;
   required int32  partition_num        =7;
   required int64  row_count            =8;
   required int64  inserted_row_count   =9;
   required int64  deleted_row_count    =10;
   required int64  updated_row_count    =11;
   required int32  primary_extents      =12;
   required int32  secondary_extents    =13;
   required int32  max_extents          =14;
   required int32  allocated_extents    =15;
   required int64  current_eof          =16;
   required int64  create_time          =17;
   required int64  last_mod_time        =18;
   required int64  last_open_time       =19;
   required int32  file_code            =20;
   required int32  record_len           =21;
   required int32  corrupt_broken       =22;
   required int32  crash_open           =23;
   required int32  compression_type      =24;
   required string compression_type_str  =25;
   required int64  compressed_eof_sectors =26;
   required float  compression_ratio     =27;
   required int64  space_internal_overhead = 28;
   required int64  access_counter          = 29;
   required int64  collection_time       = 30;
  }
 repeated label_stats_aggr_all_partitions partbuf = 1;
 required common.info_header header = 2;
}